<resources>
    <string name="app_name">La Boutique</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logo">Logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Entrar</string>
    <string name="et_hint_email_id">E-mail</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="lbl_forgot_password">Olvidaste tu contraseña?</string>
    <string name="btn_lbl_login">Entrar</string>
    <string name="don_t_have_account">No tienes una cuenta?</string>
    <string name="register">Registrate aqui</string>
    <string name="please_wait">Porfavor Espera&#8230;</string>
    <string name="please_click_back_again_to_exit">Pulsa otra vez para salir</string>
    <string name="create_an_account">Crea tu cuenta</string>
    <string name="hint_first_name">Nombre(s)</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="et_hint_confirm_password">Confirmar contraseña</string>
    <string name="i_agree_to_the_terms_and_condition">Estoy de acuerdo con los</string>
    <string name="btn_lbl_register">Registrarse</string>
    <string name="already_have_an_account">Ya tienes una cuenta?</string>
    <string name="login">Entra aqui</string>
    <string name="registry_successful">Te has registrado correctamente!</string>
    <string name="err_msg_enter_first_name">Porfavor introduce tu nombre</string>
    <string name="err_msg_enter_last_name">Porfavor introduce tu apellido</string>
    <string name="err_msg_enter_email">Porfavor introduce tu email</string>
    <string name="err_msg_enter_password">Porfavor introduce tu contraseña</string>
    <string name="err_msg_pass_and_confirm_mismatch">Tu contraseña no es igual. Porfavor revisala.</string>
    <string name="err_msg_agree_terms_and_conditions">Porfavor marca la casilla para aceptar los términos y condiciones</string>
    <string name="title_complete_profile">Completa tus datos</string>
    <string name="placeholder">imagen</string>
    <string name="et_hint_mobile_number">Celular</string>
    <string name="rb_lbl_male">Hombre</string>
    <string name="rb_lbl_female">Mujer</string>
    <string name="btn_lbl_save">Guardar</string>
    <string name="title_edit_profile">Editar Perfil</string>
    <string name="msg_profile_update_success">Actualizacion correcta</string>
    <string name="read_storage_permission_denied">Denegaste los permisos de acceso a la aplicacion. Porfavor ve a los ajustes de tu telefono para dar los permisos necesarios.</string>
    <string name="image_selection_failed">Fallo en la seleccion de imagen</string>
    <string name="err_msg_enter_mobile">Porfavor introduce tu numero de celular</string>
    <string name="title_forgot_password">Olvidaste tu contraseña?</string>
    <string name="forgot_password_title_description">Introduce tu email registrado y te enviaremos un correo para re-establecer tu contraseña.</string>
    <string name="btn_lbl_submit">Enviar</string>
    <string name="email_sent_success">Email enviado correctamente.</string>
    <string name="err_pass">El email o la contraseña estan incorrectos porfavor confirma tu informacion.</string>
    <string name="Productos">Productos</string>
    <string name="MisProductos">MisProductos</string>
    <string name="Agregar">Agregar</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="title_activity_dashboard">Productos</string>
    <string name="et_hint_product_quantity">Cantidad</string>
    <string name="et_hint_product_description">Descripcion</string>
    <string name="et_hint_product_price">Precio</string>
    <string name="et_hint_product_title">Titulo del producto</string>
    <string name="title_add_product">Agregar producto</string>
    <string name="image">imagen del producto</string>
    <string name="product_uploaded_success_message">Producto cargado correctamente.</string>
    <string name="err_msg_product_image">Porfavor selecciona una imagen</string>
    <string name="err_msg_product_title">Porfavor introduce un titulo de producto</string>
    <string name="err_msg_product_price">Porfavor introduce el precio</string>
    <string name="err_msg_product_description">Porfavor introduce la descripcion del producto</string>
    <string name="err_msg_product_quantity">Porfavor introduce la cantidad de productos</string>
    <string name="product_delete_success_message">El producto fue eliminado correctamente</string>
    <string name="delete_dialog_title">Borrar</string>
    <string name="delete_dialog_message">Estas seguro de querer borrar el producto?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="no_products_added_yet">No se han agregado productos</string>
    <string name="title_agregar_productos">Agregar</string>
    <string name="action_settings">Mi perfil</string>
    <string name="action_cart">Mi carrito</string>
    <string name="fondo">fondo</string>
    <string name="title_settings">Mi Perfil</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_addresses">Direcciones guardadas</string>
    <string name="btn_lbl_logout">Salir</string>
    <string name="title_address_list">Lista de direcciones</string>
    <string name="lbL_add_address">Agregar direccion</string>
    <string name="no_address_found">No se encontro ninguna direccion</string>
    <string name="err_your_address_deleted_successfully">Direccion eliminada correctamente</string>
    <string name="title_select_address">Selecciona tu direccion</string>
    <string name="title_add_address">Editar direccion</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_phone_number">Telefono</string>
    <string name="hint_address">Direccion</string>
    <string name="hint_zip_code">Codigo postal</string>
    <string name="hint_additional_note">Nota adicional</string>
    <string name="lbl_home">CASA</string>
    <string name="lbl_office">OFICINA</string>
    <string name="lbl_other">OTRO</string>
    <string name="hint_other_details">Otros detalles</string>
    <string name="title_edit_address">Editar direccion</string>
    <string name="btn_lbl_update">Actualizar</string>
    <string name="err_msg_please_enter_full_name">Porfavor introduce el nombre completo</string>
    <string name="err_msg_please_enter_phone_number">Porfavor introduce el numero telefonico</string>
    <string name="err_msg_please_enter_address">Porfavor introduce la direccion</string>
    <string name="err_msg_please_enter_zip_code">Porfavor introduce el codigo postal</string>
    <string name="msg_your_address_updated_successfully">Se actualizo la direccion correctamente</string>
    <string name="err_your_address_added_successfully">Se guardo la direccion correctamente</string>
    <string name="no_dashboard_item_found">No existen productos disponibles por el momento.</string>
    <string name="btn_lbl_go_to_cart">Ir a mi carrito</string>
    <string name="btn_lbl_add_to_cart">Agregar a mi carrito</string>
    <string name="title_product_details">Detalles del producto</string>
    <string name="lbl_product_description">Descripcion del producto</string>
    <string name="lbl_product_details_stock_quantity">Cantidad disponible</string>
    <string name="_1">1</string>
    <string name="lbl_out_of_stock">No disponible por el momento</string>
    <string name="success_msg_item_added_to_cart">El producto ha sido agregado correctamente a tu carrito.</string>
    <string name="msg_item_removed_successfully">Producto eliminado correctamente.</string>
    <string name="title_my_cart">Mi carrito</string>
    <string name="no_cart_item_found">No se han agregado productos al carrito.</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Costo de envio</string>
    <string name="lbl_total_amount">Cantidad total</string>
    <string name="btn_lbl_checkout">Comprar</string>
    <string name="delete_cart_item">Eliminar producto del carrito</string>
    <string name="add_product">Agregar producto al carrito</string>
    <string name="remove_product">Remover producto</string>
    <string name="msg_for_available_stock">Cantidad disponible: %1$s!. No puedes agregar mas que esta cantidad.</string>
    <string name="title_checkout">Pago</string>
    <string name="checkout_lbl_product_items">Productos</string>
    <string name="btn_lbl_place_order">Ordenar</string>
    <string name="lbl_cash_on_delivery">Efectivo contra entrega</string>
    <string name="lbl_payment_mode">Modo de pago</string>
    <string name="checkout_lbl_selected_address">Direccion seleccionada</string>
    <string name="checkout_lbl_items_receipt">Recibo de productos</string>
    <string name="no_orders_placed_yet">No existen ordenes aun</string>
    <string name="title_my_order_details">Detalles de mi orden</string>
    <string name="order_details_lbl">Detalles</string>
    <string name="order_details_lbl_order_id">ID de orden</string>
    <string name="order_details_lbl_order_date">Fecha de orden</string>
    <string name="order_details_lbl_order_status">Estatus</string>
    <string name="order_status_pending">Pendiente</string>
    <string name="order_details_lbl_shipping_address">Direccion de envio</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_in_process">En proceso</string>
    <string name="title_activity_customer_dashboard">CustomerDashboardActivity</string>
    <string name="title_catalog">Productos</string>
    <string name="title_purchased">Historial de compras</string>
    <string name="history">Historial de compras</string>
    <string name="title_sold">Ventas</string>
    <string name="no_products_sold_out_yet">Aun no se han vendido productos!</string>
    <string name="title_sold_product_details">Detalle de productos vendidos</string>
    <string name="product_image">Imagen del producto</string>
    <string name="lbl_shipment_note">Nota: El costo del envio en Torreon es de 50 mxn. Si el envio es a otra ciudad o municipio, se contactar al cliente antes de hacer el envio para notificarle el costo adicional el cual es variable y se cobrara al momento de la entrega.</string>
    <string name="note_payments">Nota: Por el momento solo contamos con pago en efectivo contra entrega a traves de la app ya que aun esta en desarrollo. Gracias por su comprensión.</string>
</resources>