<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shop.laboutique.ui.activities.fragments.HomeFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.shop.laboutique.ui.activities.fragments.ProductsFragment"
        android:label="@string/title_add_product"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shop.laboutique.ui.activities.fragments.SoldFragment"
        android:label="@string/title_sold"
        tools:layout="@layout/fragment_notifications" />
</navigation>